[package]
name = "st7735-lcd"
description = "ST7735 TFT LCD driver with embedded-graphics support"
version = "0.7.1"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sajattack/st7735-lcd-rs"
readme = "README.md"
documentation = "https://docs.rs/st7735-lcd"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num-derive]
version = "0.2"
default-features = false

[dependencies.embedded-graphics]
git = "https://github.com/jamwaffles/embedded-graphics.git"
optional = true
rev = "e4ed4b0469de6bdc4ddc6ecdae40c811ac58cb18"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
